--- a/Telco_Customer_Competition_SCI_IA_2024.ipynb
+++ b/Telco_Customer_Competition_SCI_IA_2024.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyM+wn+npmqsP6OE82DuNZ00",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Dataniel31/telco-customer-churn-prediction/blob/main/Telco_Customer_Competition_SCI_IA_2024.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -36,12 +48,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!wget https://raw.githubusercontent.com/Dataniel31/telco-customer-churn-prediction/main/train.csv\n",
+        "!wget https://raw.githubusercontent.com/Dataniel31/telco-customer-churn-prediction/main/test.csv\n"
+      ],
       "metadata": {
-        "id": "5VLWJIlfTTQb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5VLWJIlfTTQb",
+        "outputId": "620ff8e5-a5eb-40a1-95f4-a3cf9d6c5278"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-08-30 03:30:23--  https://raw.githubusercontent.com/Dataniel31/telco-customer-churn-prediction/main/train.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 658019 (643K) [text/plain]\n",
+            "Saving to: ‘train.csv’\n",
+            "\n",
+            "train.csv           100%[===================>] 642.60K  --.-KB/s    in 0.05s   \n",
+            "\n",
+            "2024-08-30 03:30:24 (13.0 MB/s) - ‘train.csv’ saved [658019/658019]\n",
+            "\n",
+            "--2024-08-30 03:30:24--  https://raw.githubusercontent.com/Dataniel31/telco-customer-churn-prediction/main/test.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 275229 (269K) [text/plain]\n",
+            "Saving to: ‘test.csv’\n",
+            "\n",
+            "test.csv            100%[===================>] 268.78K  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2024-08-30 03:30:24 (7.07 MB/s) - ‘test.csv’ saved [275229/275229]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -57,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 37,
       "metadata": {
         "id": "m_YeLNIHQls3"
       },
@@ -83,7 +131,7 @@
       "metadata": {
         "id": "tPPWGmMvRWF5"
       },
-      "execution_count": 19,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -98,9 +146,9 @@
           "height": 342
         },
         "id": "CvIgPrORWTd9",
-        "outputId": "0e1e3148-fa14-495b-f74b-2368abe2df00"
+        "outputId": "63ffc594-0739-435c-b641-78cd2f580158"
       },
-      "execution_count": 20,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +186,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-57c0e30b-4674-44bf-88d3-e732737b2424\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7083c699-ad14-4671-9ab1-3507c999e662\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -308,7 +356,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-57c0e30b-4674-44bf-88d3-e732737b2424')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7083c699-ad14-4671-9ab1-3507c999e662')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -360,12 +408,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-57c0e30b-4674-44bf-88d3-e732737b2424 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7083c699-ad14-4671-9ab1-3507c999e662 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-57c0e30b-4674-44bf-88d3-e732737b2424');\n",
+              "        const element = document.querySelector('#df-7083c699-ad14-4671-9ab1-3507c999e662');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -385,8 +433,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-baf2d43f-49d0-4ddb-9385-c8f84aa8dba6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-baf2d43f-49d0-4ddb-9385-c8f84aa8dba6')\"\n",
+              "<div id=\"df-7067367e-0150-4a68-94bf-3fba95342b39\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7067367e-0150-4a68-94bf-3fba95342b39')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -505,7 +553,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-baf2d43f-49d0-4ddb-9385-c8f84aa8dba6 button');\n",
+              "        document.querySelector('#df-7067367e-0150-4a68-94bf-3fba95342b39 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -521,7 +569,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 39
         }
       ]
     },
@@ -536,9 +584,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RfOCGYr5RhKu",
-        "outputId": "383bebac-293b-4126-8a01-4df344474a0b"
+        "outputId": "0dc1fd45-b5f9-41e1-dd45-4cddaa6c83bf"
       },
-      "execution_count": 21,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "__4U8XSGRm6G",
-        "outputId": "d2a07c90-e96c-444c-e8bd-39486291d25e"
+        "outputId": "6530012e-f547-4253-9433-cc107526b23a"
       },
-      "execution_count": 22,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +700,7 @@
       "metadata": {
         "id": "zg-rwqqTWfAN"
       },
-      "execution_count": 23,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -665,7 +713,7 @@
       "metadata": {
         "id": "fXRrosXzWhwG"
       },
-      "execution_count": 24,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -680,9 +728,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xLdLrO4WkHN",
-        "outputId": "10c29e05-6368-4da5-be2c-1bce11c987dd"
+        "outputId": "71480161-8328-43e6-fb0a-ed3ac9584491"
       },
-      "execution_count": 25,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,9 +802,9 @@
           "height": 371
         },
         "id": "iSG-n5XTWwBO",
-        "outputId": "fd254bf9-d7ba-48ff-ed94-ebb5a881b8b4"
+        "outputId": "01d62814-a871-4497-f20e-692cb5862210"
       },
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "display_data",
@@ -816,9 +864,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cik2Yq9GXSDf",
-        "outputId": "6c944963-232a-4769-9075-7b6810c8b835"
+        "outputId": "49b3ed9d-580d-47af-ba14-ba8f8dd02fab"
       },
-      "execution_count": 27,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,9 +953,9 @@
           "height": 541
         },
         "id": "pMkkahcgXdDO",
-        "outputId": "d6d88191-c2c3-47e2-8b7b-bf102f9f942f"
+        "outputId": "2cd2f6be-de57-44c0-b655-83a5ea4c5e53"
       },
-      "execution_count": 28,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,9 +1007,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DNrP6tuLXvPN",
-        "outputId": "9bbbd2e6-1cb6-4405-ae9c-d3ebff4871ef"
+        "outputId": "768f6a90-20bc-4553-e566-0695852a1def"
       },
-      "execution_count": 29,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1048,7 @@
       "metadata": {
         "id": "LH3RgstleVKW"
       },
-      "execution_count": 30,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1031,9 +1079,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pFdYRbl3evkW",
-        "outputId": "346b4be0-880b-4e7d-847c-f1e2b13be4c1"
+        "outputId": "f0e18968-1754-4fe7-c25b-1bba0c2695a6"
       },
-      "execution_count": 31,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,7 +1121,7 @@
       "metadata": {
         "id": "Xf33IsSxfMeP"
       },
-      "execution_count": 32,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1101,7 +1149,7 @@
       "metadata": {
         "id": "0z4_9LakfPxm"
       },
-      "execution_count": 33,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1113,7 +1161,7 @@
       "metadata": {
         "id": "Zylp--SJfQ-P"
       },
-      "execution_count": 34,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1130,7 +1178,7 @@
       "metadata": {
         "id": "j_Zph7MUfUY_"
       },
-      "execution_count": 35,
+      "execution_count": 54,
       "outputs": []
     },
     {
